--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue3-html2pdf",
+  "name": "@sango-tech/vue3-html2pdf",
   "version": "1.0.0",
-  "description": "",
+  "description": "A vue3 wrapper that use html2pdf for convert html to pdf",
   "main": "dist/vue3-html2pdf.ssr.js",
   "module": "dist/vue3-html2pdf.esm.js",
   "unpkg": "dist/vue3-html2pdf.min.js",
@@ -41,5 +41,15 @@
   },
   "engines": {
     "node": ">=8"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/raiblaze/vue3-html2pdf.git"
+  },
+  "author": "Rai Blaze",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/raiblaze/vue3-html2pdf/issues"
+  },
+  "homepage": "https://github.com/raiblaze/vue3-html2pdf#readme"
 }
